[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-citation-extract-py"
description = "Extract citations and references from LLM output"
version = "0.1.0"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-citation-extract-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_citation_extract = ["py.typed"]
